Fix alignment issue in roles page

--- a/modules/theme/src/theme-core/definitions/apps/developer-portal.less
+++ b/modules/theme/src/theme-core/definitions/apps/developer-portal.less
@@ -952,6 +952,10 @@
     .ui.basic.segment.bordered.emphasized {
         margin-top: 4px;
     }
+
+    .list-item-text .MuiListItemText-root {
+        max-width: 50% !important;
+    }
 }
 
 .role-chip-popover {
